<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/lightWhite"
            android:theme="@style/navigationtheme"
            app:headerLayout="@layout/header_menu"
            app:menu="@menu/main_menu" />
        <LinearLayout
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/secondarybackground"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/nav_menu"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/menu_icon" />
            </RelativeLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/appname"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:fontFamily="@font/islandnamina"
                            android:text="@string/logoname"
                            android:textColor="#F44336"
                            android:textSize="25sp" />

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:id="@+id/scheme"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <RelativeLayout
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:layout_margin="10dp"
                                android:background="@color/card1"
                                android:elevation="8dp">

                                <ImageView
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:layout_centerInParent="true"
                                    android:src="@drawable/sell_icon" />
                            </RelativeLayout>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Scheme"
                                android:textAlignment="center"
                                android:textColor="#000000" />


                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/sellbook"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <RelativeLayout
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:layout_margin="10dp"
                                android:background="@color/card1"
                                android:elevation="8dp">

                                <ImageView
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:layout_centerInParent="true"
                                    android:src="@drawable/sell_icon" />
                            </RelativeLayout>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/sell"
                                android:textAlignment="center"
                                android:textColor="#000000" />


                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/bookstore"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <RelativeLayout
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:layout_margin="10dp"
                                android:background="@color/card2"
                                android:elevation="8dp">

                                <ImageView
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:layout_centerInParent="true"
                                    android:src="@drawable/shop_icon" />
                            </RelativeLayout>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/store"
                                android:textAlignment="center"
                                android:textColor="#000000" />


                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/pdfActivity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <RelativeLayout
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:layout_margin="10dp"
                                android:background="@color/card3"

                                android:elevation="8dp">

                                <ImageView
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:layout_centerInParent="true"
                                    android:src="@drawable/pdf_icon" />
                            </RelativeLayout>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/PDF"
                                android:textAlignment="center"
                                android:textColor="#000000" />


                        </LinearLayout>
                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@color/banner_bg_light">

                        <LinearLayout
                            android:id="@+id/top"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="@color/card"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="104dp"
                                android:layout_height="match_parent"
                                android:layout_margin="0dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="50dp"
                                android:fontFamily="sans-serif-condensed-medium"
                                android:text="Book"
                                android:textAllCaps="true"
                                android:textColor="@color/colorAccent"
                                android:textSize="30dp" />

                        </LinearLayout>


                    </RelativeLayout>


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/mostviewed_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="8dp"
                        android:layout_toRightOf="@+id/top" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:orientation="vertical"
                        android:padding="20dp">
                    </LinearLayout>

                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </androidx.drawerlayout.widget.DrawerLayout>

    <ProgressBar
        android:id="@+id/main_progress_circle_1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:indeterminateDrawable="@drawable/progress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>